# ImProc

./: README.md
lab3/: edge_detectors.fig  filters.fig  lab3.m  noisy_image.fig  output_image_rotated.fig
lab4_opencv/: CMakeLists.txt  ExampleCode.cpp  Makefile  imgprocessing.cpp
lab5_3d/Images/: Thumbs.db
lab5_3d/Matlab/: DepthCompute.m  Matching.m  ex1.asv  ex1.m  ex2.asv  ex2.m
